--- a/thingslink-common/thingslink-common-security/pom.xml
+++ b/thingslink-common/thingslink-common-security/pom.xml
@@ -25,10 +25,10 @@
             <artifactId>thingslink-auth-api</artifactId>
         </dependency>
 
-        <!-- Spring Oauth2 -->
+        <!-- Spring Oauth2资源服务器 -->
         <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-oauth2-authorization-server</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
         </dependency>
 
     </dependencies>
