设备入网鉴权 优化mqtt初始化连接

--- a/mock-device/pom.xml
+++ b/mock-device/pom.xml
@@ -23,8 +23,8 @@
 
         <!-- mqtt消息队列 -->
         <dependency>
-            <groupId>com.thingslink</groupId>
-            <artifactId>thingslink-common-mqtt</artifactId>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-mqtt</artifactId>
         </dependency>
 
         <dependency>
