--- a/thingslink-modules/thingslink-modules-equipment/thingslink-equipment-biz/pom.xml
+++ b/thingslink-modules/thingslink-modules-equipment/thingslink-equipment-biz/pom.xml
@@ -60,10 +60,10 @@
             <artifactId>thingslink-common-orm</artifactId>
         </dependency>
 
-        <!--消息队列-->
+        <!-- mqtt消息队列 -->
         <dependency>
-            <groupId>com.thingslink</groupId>
-            <artifactId>thingslink-common-mqtt</artifactId>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-mqtt</artifactId>
         </dependency>
 
         <!-- thingslink Common Log -->
