--- a/thingslink-modules/thingslink-modules-equipment/thingslink-equipment-biz/pom.xml
+++ b/thingslink-modules/thingslink-modules-equipment/thingslink-equipment-biz/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+        </dependency>
+
         <!-- Sentinel -->
         <dependency>
             <groupId>com.thingslink</groupId>
