--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <spring-statemachine.version>3.2.0</spring-statemachine.version>
         <lombok.version>1.18.28</lombok.version>
         <mysql.version>8.0.33</mysql.version>
+        <netty.version>4.1.110.Final</netty.version>
         <redisson.version>3.27.2</redisson.version>
         <dynamic-ds.version>4.2.0</dynamic-ds.version>
         <hutool.version>5.8.27</hutool.version>
@@ -171,6 +172,13 @@
                 <groupId>com.mysql</groupId>
                 <artifactId>mysql-connector-j</artifactId>
                 <version>${mysql.version}</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-all</artifactId>
+                <version>${netty.version}</version>
             </dependency>
 
             <!--认证rpc服务-->
