改造扩展模块

--- a/pom.xml
+++ b/pom.xml
@@ -215,7 +215,7 @@
     <modules>
         <module>thingslink-auth</module>
         <module>thingslink-gateway</module>
-        <module>thingslink-visual</module>
+        <module>thingslink-extends</module>
         <module>thingslink-modules</module>
         <module>thingslink-common</module>
         <module>mock-device</module>
