--- a/thingslink-extends/pom.xml
+++ b/thingslink-extends/pom.xml
@@ -14,11 +14,11 @@
         <module>thingslink-monitor</module>
     </modules>
 
-    <artifactId>thingslink-visual</artifactId>
+    <artifactId>thingslink-extends</artifactId>
     <packaging>pom</packaging>
 
     <description>
-        thingslink-visual图形化管理模块
+        thingslink-extend扩展模块
     </description>
 
 </project>
