--- a/wzkris-common/wzkris-common-security/pom.xml
+++ b/wzkris-common/wzkris-common-security/pom.xml
@@ -30,10 +30,10 @@
 			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
 		</dependency>
 
-		<!-- Spring Oauth2客户端 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<optional>true</optional>
 		</dependency>
 
 	</dependencies>
