--- a/wzkris-common/wzkris-common-swagger/pom.xml
+++ b/wzkris-common/wzkris-common-swagger/pom.xml
@@ -19,6 +19,11 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>com.wzkris</groupId>
+			<artifactId>wzkris-common-core</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>com.github.xiaoymin</groupId>
 			<artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
 		</dependency>
