--- a/wzkris-common/wzkris-common-web/pom.xml
+++ b/wzkris-common/wzkris-common-web/pom.xml
@@ -14,6 +14,11 @@
 
 	<dependencies>
 
+		<dependency>
+			<groupId>com.wzkris</groupId>
+			<artifactId>wzkris-common-core</artifactId>
+		</dependency>
+
 		<!-- SpringBoot Web -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -23,12 +28,6 @@
 		<dependency>
 			<groupId>io.github.linpeilie</groupId>
 			<artifactId>mapstruct-plus-spring-boot-starter</artifactId>
-		</dependency>
-
-		<!-- 持久层-->
-		<dependency>
-			<groupId>com.wzkris</groupId>
-			<artifactId>wzkris-common-orm</artifactId>
 		</dependency>
 
 		<!-- SpringBoot Actuator -->
