--- a/wzkris-common/wzkris-common-security/pom.xml
+++ b/wzkris-common/wzkris-common-security/pom.xml
@@ -21,6 +21,11 @@
 
 		<dependency>
 			<groupId>com.wzkris</groupId>
+			<artifactId>wzkris-auth-api</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.wzkris</groupId>
 			<artifactId>wzkris-common-openfeign</artifactId>
 		</dependency>
 
