spring session 使用jdk序列化（json序列化有许多问题）

--- a/wzkris-common/wzkris-common-security/pom.xml
+++ b/wzkris-common/wzkris-common-security/pom.xml
@@ -29,6 +29,11 @@
 			<artifactId>wzkris-common-openfeign</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-cas</artifactId>
+		</dependency>
+
 		<!-- Spring Oauth2资源服务器 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
