--- a/wzkris-auth/wzkris-auth-biz/pom.xml
+++ b/wzkris-auth/wzkris-auth-biz/pom.xml
@@ -34,6 +34,17 @@
 			<artifactId>spring-security-oauth2-authorization-server</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
+
+		<!-- wzkris Common Redis-->
+		<dependency>
+			<groupId>com.wzkris</groupId>
+			<artifactId>wzkris-common-redis</artifactId>
+		</dependency>
+
 		<!-- 引入分布式session -->
 		<dependency>
 			<groupId>org.springframework.session</groupId>
@@ -74,12 +85,6 @@
 		<dependency>
 			<groupId>com.wzkris</groupId>
 			<artifactId>wzkris-common-security</artifactId>
-		</dependency>
-
-		<!-- wzkris Common Redis-->
-		<dependency>
-			<groupId>com.wzkris</groupId>
-			<artifactId>wzkris-common-redis</artifactId>
 		</dependency>
 
 		<!-- 接口文档 -->
