--- a/wzkris-common/wzkris-common-core/pom.xml
+++ b/wzkris-common/wzkris-common-core/pom.xml
@@ -96,6 +96,12 @@
 			<artifactId>jakarta.servlet-api</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<optional>true</optional>
+		</dependency>
+
 	</dependencies>
 
 </project>
