--- a/wzkris-modules/wzkris-modules-equipment/wzkris-equipment-biz/pom.xml
+++ b/wzkris-modules/wzkris-modules-equipment/wzkris-equipment-biz/pom.xml
@@ -87,6 +87,13 @@
 			<groupId>com.wzkris</groupId>
 			<artifactId>wzkris-common-swagger</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<optional>true</optional>
+		</dependency>
+
 	</dependencies>
 
 	<build>
