增加微信sdk 优化认证服务存储信息

--- a/wzkris-common/pom.xml
+++ b/wzkris-common/pom.xml
@@ -34,5 +34,6 @@
 		<module>wzkris-common-stream</module>
 		<module>wzkris-common-swagger</module>
 		<module>wzkris-common-web</module>
+		<module>wzkris-common-weixin-sdk</module>
 	</modules>
 </project>
