--- a/wzkris-modules/wzkris-modules-user/wzkris-user-biz/pom.xml
+++ b/wzkris-modules/wzkris-modules-user/wzkris-user-biz/pom.xml
@@ -12,6 +12,10 @@
 
 	<artifactId>wzkris-user-biz</artifactId>
 
+	<properties>
+		<weixin-java.version>4.6.0</weixin-java.version>
+	</properties>
+
 	<dependencies>
 		<!-- SpringCloud Alibaba Nacos -->
 		<dependency>
