增加第三方的登录

--- a/wzkris-common/wzkris-common-weixin-sdk/pom.xml
+++ b/wzkris-common/wzkris-common-weixin-sdk/pom.xml
@@ -34,5 +34,12 @@
 			<version>${weixin-java.version}</version>
 		</dependency>
 
+		<!--微信小程序-->
+		<dependency>
+			<groupId>com.github.binarywang</groupId>
+			<artifactId>weixin-java-mp</artifactId>
+			<version>${weixin-java.version}</version>
+		</dependency>
+
 	</dependencies>
 </project>
