支持微信登录

--- a/wzkris-auth/wzkris-auth-biz/pom.xml
+++ b/wzkris-auth/wzkris-auth-biz/pom.xml
@@ -87,6 +87,11 @@
 			<artifactId>wzkris-common-security</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.wzkris</groupId>
+			<artifactId>wzkris-common-weixin-sdk</artifactId>
+		</dependency>
+
 		<!-- 接口文档 -->
 		<dependency>
 			<groupId>com.wzkris</groupId>
