--- a/wzkris-common/wzkris-common-bom/pom.xml
+++ b/wzkris-common/wzkris-common-bom/pom.xml
@@ -25,6 +25,13 @@
             <!-- 核心模块 -->
             <dependency>
                 <groupId>com.wzkris</groupId>
+                <artifactId>wzkris-common-captcha</artifactId>
+                <version>${revision}</version>
+            </dependency>
+
+            <!-- 核心模块 -->
+            <dependency>
+                <groupId>com.wzkris</groupId>
                 <artifactId>wzkris-common-core</artifactId>
                 <version>${revision}</version>
             </dependency>
