--- a/wzkris-common/pom.xml
+++ b/wzkris-common/pom.xml
@@ -19,6 +19,7 @@
 
     <modules>
         <module>wzkris-common-bom</module>
+        <module>wzkris-common-captcha</module>
         <module>wzkris-common-core</module>
         <module>wzkris-common-datasource</module>
         <module>wzkris-common-excel</module>
