--- a/wzkris-common/wzkris-common-orm/pom.xml
+++ b/wzkris-common/wzkris-common-orm/pom.xml
@@ -36,8 +36,8 @@
 
         <!-- jdbc驱动-->
         <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.baomidou/mybatis-plus-jsqlparser -->
