chore: 将部分依赖转移至对应模块 chore: 升级spring-boot-dependencies至3.4.4 chore: 升级spring-cloud-dependencies至2024.0.1 chore: 升级hutool-bom至5.8.37 chore: caffeine至3.2.0 chore: minio至8.5.17 chore: mybatis-plus至3.5.11

--- a/wzkris-common/wzkris-common-statemachine/pom.xml
+++ b/wzkris-common/wzkris-common-statemachine/pom.xml
@@ -13,12 +13,17 @@
     <artifactId>wzkris-common-statemachine</artifactId>
     <description>状态机</description>
 
+    <properties>
+        <spring-statemachine.version>4.0.0</spring-statemachine.version>
+    </properties>
+
     <dependencies>
 
         <!-- spring状态机-->
         <dependency>
             <groupId>org.springframework.statemachine</groupId>
             <artifactId>spring-statemachine-starter</artifactId>
+            <version>${spring-statemachine.version}</version>
         </dependency>
 
     </dependencies>
