--- a/wzkris-common/wzkris-common-core/pom.xml
+++ b/wzkris-common/wzkris-common-core/pom.xml
@@ -16,6 +16,10 @@
         wzkris-common-core核心模块
     </description>
 
+    <properties>
+        <caffeine.version>3.2.0</caffeine.version>
+    </properties>
+
     <dependencies>
 
         <!-- spring上下文扩展,如缓存、邮件等 -->
@@ -28,12 +32,6 @@
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
-        </dependency>
-
-        <!-- Transmittable ThreadLocal -->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>transmittable-thread-local</artifactId>
         </dependency>
 
         <!--Lombok引入-->
@@ -52,6 +50,7 @@
         <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
+            <version>${caffeine.version}</version>
         </dependency>
 
         <!-- logback输出 -->
