--- a/wzkris-modules/wzkris-modules-file/wzkris-file-biz/pom.xml
+++ b/wzkris-modules/wzkris-modules-file/wzkris-file-biz/pom.xml
@@ -14,6 +14,7 @@
 
     <properties>
         <fastdfs.version>1.27.2</fastdfs.version>
+        <minio.version>8.5.17</minio.version>
     </properties>
 
     <dependencies>
