feat: spring session共享

--- a/wzkris-common/wzkris-common-redis/pom.xml
+++ b/wzkris-common/wzkris-common-redis/pom.xml
@@ -35,5 +35,11 @@
             <version>${redisson.version}</version>
         </dependency>
 
+        <!-- 分布式session-->
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
