refactor: 重构文件模块设计

--- a/wzkris-common/pom.xml
+++ b/wzkris-common/pom.xml
@@ -27,6 +27,7 @@
         <module>wzkris-common-log</module>
         <module>wzkris-common-dubbo</module>
         <module>wzkris-common-orm</module>
+        <module>wzkris-common-oss</module>
         <module>wzkris-common-redis</module>
         <module>wzkris-common-seata</module>
         <module>wzkris-common-security</module>
