--- a/wzkris-common/wzkris-common-log/pom.xml
+++ b/wzkris-common/wzkris-common-log/pom.xml
@@ -32,7 +32,7 @@
 
         <dependency>
             <groupId>com.wzkris</groupId>
-            <artifactId>wzkris-system-api</artifactId>
+            <artifactId>wzkris-system-rmi</artifactId>
         </dependency>
 
     </dependencies>
