--- a/wzkris-common/wzkris-common-security/pom.xml
+++ b/wzkris-common/wzkris-common-security/pom.xml
@@ -20,7 +20,7 @@
 
         <dependency>
             <groupId>com.wzkris</groupId>
-            <artifactId>wzkris-auth-api</artifactId>
+            <artifactId>wzkris-auth-rmi</artifactId>
         </dependency>
 
         <dependency>
