--- a/wzkris-common/wzkris-common-bom/pom.xml
+++ b/wzkris-common/wzkris-common-bom/pom.xml
@@ -17,6 +17,7 @@
 
     <properties>
         <revision>4.1.0</revision>
+        <spotless-maven-plugin.version>2.44.4</spotless-maven-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -156,6 +157,7 @@
             <plugin>
                 <groupId>com.diffplug.spotless</groupId>
                 <artifactId>spotless-maven-plugin</artifactId>
+                <version>${spotless-maven-plugin.version}</version>
                 <configuration>
                     <skip>true</skip> <!-- 跳过当前模块 -->
                 </configuration>
