--- a/wzkris-common/wzkris-common-bom/pom.xml
+++ b/wzkris-common/wzkris-common-bom/pom.xml
@@ -36,25 +36,17 @@
                 <version>${revision}</version>
             </dependency>
 
-            <!-- 权限范围 -->
-            <dependency>
-                <groupId>com.wzkris</groupId>
-                <artifactId>wzkris-common-orm</artifactId>
-                <version>${revision}</version>
-            </dependency>
-
-            <!-- 权限范围 -->
-            <dependency>
-                <groupId>com.wzkris</groupId>
-                <artifactId>wzkris-common-oss</artifactId>
-                <version>${revision}</version>
-            </dependency>
-
-
             <!-- 多数据源 -->
             <dependency>
                 <groupId>com.wzkris</groupId>
                 <artifactId>wzkris-common-datasource</artifactId>
+                <version>${revision}</version>
+            </dependency>
+
+            <!--rpc服务 -->
+            <dependency>
+                <groupId>com.wzkris</groupId>
+                <artifactId>wzkris-common-dubbo</artifactId>
                 <version>${revision}</version>
             </dependency>
 
@@ -68,28 +60,35 @@
             <!-- 日志记录 -->
             <dependency>
                 <groupId>com.wzkris</groupId>
-                <artifactId>wzkris-common-log</artifactId>
+                <artifactId>wzkris-common-loadbalancer</artifactId>
                 <version>${revision}</version>
             </dependency>
 
             <!-- 日志记录 -->
             <dependency>
                 <groupId>com.wzkris</groupId>
-                <artifactId>wzkris-common-loadbalancer</artifactId>
+                <artifactId>wzkris-common-log</artifactId>
                 <version>${revision}</version>
             </dependency>
 
-            <!--mq服务 -->
+            <!-- feign调用 -->
             <dependency>
                 <groupId>com.wzkris</groupId>
-                <artifactId>wzkris-common-stream</artifactId>
+                <artifactId>wzkris-common-openfeign</artifactId>
                 <version>${revision}</version>
             </dependency>
 
-            <!--rpc服务 -->
+            <!-- 权限范围 -->
             <dependency>
                 <groupId>com.wzkris</groupId>
-                <artifactId>wzkris-common-dubbo</artifactId>
+                <artifactId>wzkris-common-orm</artifactId>
+                <version>${revision}</version>
+            </dependency>
+
+            <!-- 权限范围 -->
+            <dependency>
+                <groupId>com.wzkris</groupId>
+                <artifactId>wzkris-common-oss</artifactId>
                 <version>${revision}</version>
             </dependency>
 
@@ -125,6 +124,13 @@
             <dependency>
                 <groupId>com.wzkris</groupId>
                 <artifactId>wzkris-common-statemachine</artifactId>
+                <version>${revision}</version>
+            </dependency>
+
+            <!--mq服务 -->
+            <dependency>
+                <groupId>com.wzkris</groupId>
+                <artifactId>wzkris-common-stream</artifactId>
                 <version>${revision}</version>
             </dependency>
 
