--- a/wzkris-common/wzkris-common-security/pom.xml
+++ b/wzkris-common/wzkris-common-security/pom.xml
@@ -29,6 +29,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.wzkris</groupId>
+            <artifactId>wzkris-common-openfeign</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
         </dependency>
