--- a/wzkris-modules/wzkris-modules-file/wzkris-file-rmi/pom.xml
+++ b/wzkris-modules/wzkris-modules-file/wzkris-file-rmi/pom.xml
@@ -13,9 +13,11 @@
     <artifactId>wzkris-file-rmi</artifactId>
 
     <dependencies>
+
         <dependency>
             <groupId>com.wzkris</groupId>
-            <artifactId>wzkris-common-core</artifactId>
+            <artifactId>wzkris-common-openfeign</artifactId>
         </dependency>
+
     </dependencies>
 </project>
