--- a/wzkris-auth/wzkris-auth-biz/src/main/resources/application.yml
+++ b/wzkris-auth/wzkris-auth-biz/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     name: wzkris-auth
   profiles:
     active: @profiles.active@
-    include: dubbo
+    include: dubbo, feign
   cloud:
     nacos:
       # 注册地址
