--- a/wzkris-modules/wzkris-modules-system/wzkris-system-biz/src/main/resources/application.yml
+++ b/wzkris-modules/wzkris-modules-system/wzkris-system-biz/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     name: wzkris-system
   profiles:
     active: @profiles.active@
-    include: dubbo
+    include: dubbo, feign
   cloud:
     nacos:
       # 注册地址
