--- a/wzkris-modules/wzkris-modules-user/wzkris-user-biz/src/main/resources/application.yml
+++ b/wzkris-modules/wzkris-modules-user/wzkris-user-biz/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     name: wzkris-user
   profiles:
     active: @profiles.active@
-    include: dubbo
+    include: dubbo, feign
   cloud:
     nacos:
       # 注册地址
