--- a/wzkris-modules/wzkris-modules-user/wzkris-user-rmi/pom.xml
+++ b/wzkris-modules/wzkris-modules-user/wzkris-user-rmi/pom.xml
@@ -16,7 +16,7 @@
 
         <dependency>
             <groupId>com.wzkris</groupId>
-            <artifactId>wzkris-common-core</artifactId>
+            <artifactId>wzkris-common-openfeign</artifactId>
         </dependency>
 
     </dependencies>
