--- a/wzkris-common/wzkris-common-openfeign/pom.xml
+++ b/wzkris-common/wzkris-common-openfeign/pom.xml
@@ -32,5 +32,18 @@
             <artifactId>spring-cloud-starter-loadbalancer</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <optional>true</optional>
+        </dependency>
+
     </dependencies>
+
 </project>
