--- a/wzkris-extends/wzkris-monitor-admin/src/main/resources/application.yml
+++ b/wzkris-extends/wzkris-monitor-admin/src/main/resources/application.yml
@@ -2,19 +2,16 @@
 server:
   port: 9100
 
-# Spring
+
 spring:
   application:
-    # 应用名称
     name: wzkris-monitor-admin
   profiles:
     # 环境配置
     active: @profiles.active@
   cloud:
     nacos:
-      # 注册地址
       server-addr: @nacos.server@
-      #权限认证
       username: @nacos.username@
       password: @nacos.password@
       discovery:
@@ -25,5 +22,5 @@ spring:
         group: @nacos.group@
   config:
     import:
-      - optional:nacos:application-common.yml
+      - optional:nacos:common.yml?group=COMMON_GROUP
       - optional:nacos:${spring.application.name}.yml
