--- a/wzkris-modules/wzkris-modules-system/wzkris-system-biz/src/main/resources/application.yml
+++ b/wzkris-modules/wzkris-modules-system/wzkris-system-biz/src/main/resources/application.yml
@@ -1,18 +1,15 @@
 server:
   port: 5555
-# Spring
+
 spring:
   application:
-    # 应用名称
     name: wzkris-system
   profiles:
     active: @profiles.active@
     include: dubbo, feign
   cloud:
     nacos:
-      # 注册地址
       server-addr: @nacos.server@
-      # 权限认证
       username: @nacos.username@
       password: @nacos.password@
       discovery:
@@ -23,7 +20,8 @@ spring:
         group: @nacos.group@
   config:
     import:
-      - optional:nacos:application-common.yml
+      - optional:nacos:common.yml?group=COMMON_GROUP
+      - optional:nacos:redis.yml?group=COMMON_GROUP
       - optional:nacos:${spring.application.name}.yml
 
 --- # xxl-job 配置
