refactor(validator): 将校验器从core模块拆分出来

--- a/wzkris-bom/pom.xml
+++ b/wzkris-bom/pom.xml
@@ -141,6 +141,13 @@
                 <version>${revision}</version>
             </dependency>
 
+            <!-- 校验模块 -->
+            <dependency>
+                <groupId>com.wzkris</groupId>
+                <artifactId>wzkris-common-validator</artifactId>
+                <version>${revision}</version>
+            </dependency>
+
             <!-- web容器-->
             <dependency>
                 <groupId>com.wzkris</groupId>
