--- a/wzkris-modules/wzkris-modules-file/wzkris-file-rmi/pom.xml
+++ b/wzkris-modules/wzkris-modules-file/wzkris-file-rmi/pom.xml
@@ -19,5 +19,10 @@
             <artifactId>wzkris-common-openfeign</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.wzkris</groupId>
+            <artifactId>wzkris-common-validator</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
