--- a/wzkris-auth/wzkris-auth-rmi/pom.xml
+++ b/wzkris-auth/wzkris-auth-rmi/pom.xml
@@ -18,5 +18,10 @@
             <artifactId>wzkris-common-openfeign</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.wzkris</groupId>
+            <artifactId>wzkris-common-validator</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
