--- a/wzkris-common/wzkris-common-web/pom.xml
+++ b/wzkris-common/wzkris-common-web/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>wzkris-common-core</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.wzkris</groupId>
+            <artifactId>wzkris-common-validator</artifactId>
+        </dependency>
+
         <!-- SpringBoot Web -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
