--- a/wzkris-modules/wzkris-modules-user/wzkris-user-rmi/pom.xml
+++ b/wzkris-modules/wzkris-modules-user/wzkris-user-rmi/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>wzkris-common-openfeign</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.wzkris</groupId>
+            <artifactId>wzkris-common-validator</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
