feat: 动态线程池 初版

--- a/wzkris-auth/wzkris-auth-biz/pom.xml
+++ b/wzkris-auth/wzkris-auth-biz/pom.xml
@@ -58,6 +58,12 @@
             <artifactId>wzkris-common-captcha</artifactId>
         </dependency>
 
+        <!--动态线程池-->
+        <dependency>
+            <groupId>com.wzkris</groupId>
+            <artifactId>wzkris-common-thread</artifactId>
+        </dependency>
+
         <!-- Sentinel -->
         <dependency>
             <groupId>com.wzkris</groupId>
