--- a/wzkris-common/wzkris-common-thread/pom.xml
+++ b/wzkris-common/wzkris-common-thread/pom.xml
@@ -41,6 +41,13 @@
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-alibaba-nacos-config</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <optional>true</optional>
         </dependency>
 
     </dependencies>
