--- a/wzkris-modules/wzkris-modules-file/wzkris-file-biz/src/main/resources/application.yml
+++ b/wzkris-modules/wzkris-modules-file/wzkris-file-biz/src/main/resources/application.yml
@@ -21,4 +21,5 @@ spring:
   config:
     import:
       - optional:nacos:common.yml?group=COMMON_GROUP
+      - optional:nacos:thread.yml?group=COMMON_GROUP
       - optional:nacos:${spring.application.name}.yml
