--- a/wzkris-modules/wzkris-modules-user/wzkris-user-biz/src/main/resources/application.yml
+++ b/wzkris-modules/wzkris-modules-user/wzkris-user-biz/src/main/resources/application.yml
@@ -22,4 +22,5 @@ spring:
     import:
       - optional:nacos:common.yml?group=COMMON_GROUP
       - optional:nacos:redis.yml?group=COMMON_GROUP
+      - optional:nacos:thread.yml?group=COMMON_GROUP
       - optional:nacos:${spring.application.name}.yml
