--- a/wzkris-common/pom.xml
+++ b/wzkris-common/pom.xml
@@ -25,6 +25,7 @@
         <module>wzkris-common-excel</module>
         <module>wzkris-common-loadbalancer</module>
         <module>wzkris-common-log</module>
+        <module>wzkris-common-notifier</module>
         <module>wzkris-common-openfeign</module>
         <module>wzkris-common-orm</module>
         <module>wzkris-common-oss</module>
