--- a/wzkris-common/wzkris-common-core/pom.xml
+++ b/wzkris-common/wzkris-common-core/pom.xml
@@ -26,7 +26,7 @@
         <!-- spring上下文扩展,如缓存、邮件等 -->
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-context-support</artifactId>
+            <artifactId>spring-context</artifactId>
         </dependency>
 
         <!-- 注解支持 -->
